@@ -1,5 +1,8 @@
 
 
+- IPMARK: print missing --shift parameter
+
+
 Xtables-addons 1.16 (May 27 2009)
 =================================
 - RAWNAT: make iptable_rawpost compile with 2.6.30-rc5
